kube-infra/kustomize/observability/kube-prometheus-stack/envs/dev/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-development-aws
  name: kube-prometheus-stack-prometheus
  namespace: observability
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
    host: prometheus.bradmccoy.io
  tls:
  - hosts:
    - prometheus.bradmccoy.io
    secretName: prometheus-tls-cert
